--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "swiper": "^9.3.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.83.1"
   },
   "scripts": {
     "start": "react-scripts start",
