--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "requirejs": "^2.3.6",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.0",
     "webpack": "^5.83.1"
